sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:9: error: '(' expected but 'for' found.
  for (i <- 0 to getNombreValeurs()-2 by -1) {
  ^AlgBubbleSort2:23: error: illegal start of simple expression
} 
^