sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  
  var a:Boolean = true
  var comptr = 0
  
  while
  
  for (i <- 0 to getNombreValeurs()-2 by -1) {
    
    for (j <- 0 to i) {
      
      if (!plusPetit(j,j+1)) {
        
        echange(j,j+1)
        
      }
      
    }
    
  }
  
}